compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__tuple_index_not_a_tuple.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: Nil.2
---
----- SOURCE CODE
Nil.2

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:1
  │
1 │ Nil.2
  │ ^^^ This is not a tuple

To index into this value it needs to be a tuple, however it has this type:

    Nil
